src/objects/CRMfusionDBR101__AutoConvert_Mapping__c.object
<CustomObject>
    <customHelpPage>CRMfusionDBR101__DB_Help</customHelpPage>
    <fields>
        <fullName>CRMfusionDBR101__Conversion_Action__c</fullName>
        <inlineHelpText>Defines how the data should be mapped to the selected Target Field on the Target Object.  See the DupeBlocker documentation for a full description.</inlineHelpText>
        <label>Conversion Action</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Include_in_Task__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Indicates whether or not this field should be included in the task created from the conversion containing data from the original lead.</inlineHelpText>
        <label>Include in Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Key__c</fullName>
        <description>Internal key for upserting.  This is &lt;scenario Id&gt;_&lt;lead field API name&gt;_&lt;target object name&gt;</description>
        <externalId>true</externalId>
        <label>Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Lead_Field_Display__c</fullName>
        <inlineHelpText>Select Lead field you&apos;d like to map for conversion.</inlineHelpText>
        <label>Lead Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Lead_Field__c</fullName>
        <inlineHelpText>Select Lead field you&apos;d like to map for conversion.</inlineHelpText>
        <label>Lead Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Scenario__c</fullName>
        <label>Scenario</label>
        <referenceTo>CRMfusionDBR101__Scenario__c</referenceTo>
        <relationshipLabel>DupeBlocker Auto-Convert Mappings</relationshipLabel>
        <relationshipName>AutoConvert_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Target_Field_Display__c</fullName>
        <inlineHelpText>This is the calculated display value of the target field.  Use this field when designing page layouts and reports.</inlineHelpText>
        <label>Target Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Target_Field__c</fullName>
        <description>The API name of the selected field.</description>
        <inlineHelpText>Data from the selected Lead field will be mapped into this field on the selected Target Object.</inlineHelpText>
        <label>Target Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Target_Object__c</fullName>
        <inlineHelpText>The object the Lead field&apos;s values will be mapped to during an automatic conversion.</inlineHelpText>
        <label>Target Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DupeBlocker Auto-Convert Mapping</label>
    <nameField>
        <displayFormat>Convert Mapping: {0}</displayFormat>
        <label>Convert Mapping</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DupeBlocker Auto-Convert Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>